2015-10-13 Roman
- DATA.ICONS: Appended by icons busy.png, connected.png, connecting.png.
- SYS: Translation to Russian some fixed.
- SYS.TUI: Attribute run_st is renamed to runSt.
- !!!!:UI.QTCfg: Requests to hosts processing moved to different threads and the interface made responsible at whole.


2015-10-08 Roman
- DB.LibsDB.OscadaLibs.db: User protocol implementation "OPTRIS CT/CTL" is added.
- SYS.XMLNode: To encoding on save function added symbol 0 processing to '\000' before the binary data encoding by system.
    Mostly for now to resolve problems into UI.WebCfgD.
- DAQ.ICP_DAS: ARM part updated to current and to build for ISA boards and I-8014.
- UI.{VCAEngine,Vision}: Service "activate" for visualizer specific attributes moved to "/serv/attr/{AttrId}".


2015-10-05 Roman
- UI.QTCfg: Checking for no apply editable widgets rewrote to direct checking.


2015-09-30 Roman
- DB.LibsDB.vcaBase.db: Mostly adapted for real permissions for users into new groups "op", "ITW".
- DB.Model.{AGLKS,Boiler}.St.db: Some generic properties moved from DB to the configuration file, like:
	External Hosts, Generic input transports, Security users and groups.
    Table "SYS" is purged from old configurations, part from them are moved to the configuration file.
- DB.Model.{AGLKS,Boiler}.vca.db: Main project's permition set to: "root:op" and RWRWR_.
- Security: standard users "root", "user" and groups "root", "user" creation added only after the subsystem loading and its lack.
    TSecurity::usrGrpList() set for return all groups for user "root".
- FIX:Protocol.HTTP: Fix multiplication for autologin user's items at each it loading.


2015-09-30 fido_max
- FIX:DAQ.FT3: Minor errors fixed.
- DAQ.FT3: Event handling optimized. B_ACCOUNT: Period_V, dP, T, P, E implemented. B_BUC: set time, uptime, modification implemented.


2015-09-29 Roman
- FIX:UI.VCAEngine: Attr::VizerSpec processing fix, which caused access at Web and spare attributes transfer.


2015-09-25 Roman